# Servicer.py
import grpc
import mapreduce_pb2_grpc
import mapreduce_pb2

class KMeansServiceServicer(mapreduce_pb2_grpc.KMeansServiceServicer):
    def ProcessMap(self, request, context):
        print(f"Processing map for chunk: {request.dataChunk}")
        # Example processing logic
        # You should implement actual logic to find nearest centroids and produce key-value pairs
        return mapreduce_pb2.TaskResponse(success=True, message='Map completed')

    def ProcessReduce(self, request, context):
        print(f"Reducing for data chunk: {request.dataChunk}")
        # Example processing logic
        # You should implement actual logic to aggregate and compute new centroids
        return mapreduce_pb2.TaskResponse(success=True, message='Reduce completed')

    def FetchData(self, request, context):
        print(f"Fetching data for key: {request.key}")
        # Example data fetching logic
        # You should implement logic to fetch the actual data from storage based on key
        return mapreduce_pb2.FetchResponse(dataPoints=[1.0, 2.0, 3.0])  # Example data points
